--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/app.css">
   </head>
-  <body>
-    <main class="bg-white">
-        <section class="d-flex flex-column w-25 gap-4 align-items-center">
-            <img  class="img-logo-overwatch" src="/assets/images/Overwatch-Logo.png" alt="logo Overwatch" width="250px" height="125px">
-            <div class="login-acess d-flex flex-column w-100 align-items-center gap-1">
-              <span class="welcome-play">BEM-VINDO, HERÓI!</span>
+  <body >
+    <main class="bg-white w-100 h-100 d-flex">
+        <section class="d-flex flex-column w-70 align-items-center justify-content-center">
+            <img  class="img-logo-overwatch" src="/assets/images/Overwatch-Logo.png" alt="logo Overwatch" ">
+            <div class="login-acess mt-4 d-flex flex-column w-75 align-items-center gap-1">
+              <span class="welcome-play fs-5">BEM-VINDO, HERÓI!</span>
               <label for="e-mail"></label>
               <input class="w-50"type="email" name="e-mail" id="e-mail" placeholder="E-MAIL">
               <label  for="password"></label>
               <input  class="w-50" type="email" name="password" id="password" placeholder="SENHA">
               <button type="submit" class="button-acess w-50">ACESSAR</button>
             </div>
-            <div class="play-all d-flex flex-column justify-content-center">
-              <span>JOGUE EM TODAS AS PLATAFORMAS</span>
+            <div class="play-all d-flex flex-column justify-content-center fw-bold align-items-center">
+              <span class="fs-6">JOGUE EM TODAS AS PLATAFORMAS</span>
               <div class="platforms d-flex align-content-center justify-content-center gap-2">
                 <img class="logo-platforms" src="/assets/images/logotipo-do-xbox.png" alt="logo xbox">
                 <img class="logo-platforms" src="/assets/images/ps4.png" alt="logo ps4">
@@ -29,8 +29,8 @@
             </div>            
         </section>
 
-        <section>
-
+        <section class="section-2 w-100">
+          <div class="triangle bg-white">triangulo</div>
         </section>
     </main>
     
