--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
             <div class="login-acess mt-4 d-flex flex-column w-75 align-items-center gap-1">
               <span class="welcome-play fs-5">BEM-VINDO, HERÓI!</span>
               <label for="e-mail"></label>
-              <input class="w-50"type="email" name="e-mail" id="e-mail" placeholder="E-MAIL">
+              <input class="input w-50"type="email" name="e-mail" id="e-mail" placeholder="E-MAIL">
               <label  for="password"></label>
-              <input  class="w-50" type="email" name="password" id="password" placeholder="SENHA">
+              <input  class="input w-50" type="email" name="password" id="password" placeholder="SENHA">
               <button type="submit" class="button-acess w-50">ACESSAR</button>
             </div>
             <div class="play-all d-flex flex-column justify-content-center fw-bold align-items-center">
@@ -29,8 +29,9 @@
             </div>            
         </section>
 
-        <section class="section-2 w-100">
-          <div class="triangle bg-white">triangulo</div>
+        <section class="d-flex section-2 w-100">
+          <div class="triangle"></div>
+          <div class="parallelogram"></div>
         </section>
     </main>
     
