add img coliseu, mudança de cor, add setas e setando tamanhos do poligonos

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body >
     <main class="bg-white w-100 h-100 d-flex">
         <section class="d-flex flex-column w-70 align-items-center justify-content-center">
-            <img  class="img-logo-overwatch" src="/assets/images/Overwatch-Logo.png" alt="logo Overwatch" ">
+            <img  class="img-logo-overwatch" src="/assets/images/overwatch-logo 1.png" alt="logo Overwatch" ">
             <div class="login-acess mt-4 d-flex flex-column w-75 align-items-center gap-1">
               <span class="welcome-play fs-5">BEM-VINDO, HERÓI!</span>
               <label for="e-mail"></label>
@@ -29,9 +29,11 @@
             </div>            
         </section>
 
-        <section class="d-flex section-2 w-100">
-          <div class="triangle"></div>
-          <div class="parallelogram"></div>
+        <section class=" position-relative section-2 w-100">
+          <div class="position-absolute triangle"></div>
+          <div class="position-absolute parallelogram"></div>
+          <div class="position-absolute parallelogram-2"></div>
+          <div class="position-absolute arrows"><img src="/assets/images/Group 1arrowleft.png" alt="setas para direita" class="arrows-img"></div>
         </section>
     </main>
     
