inserção de setas pag home

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,11 @@
           <div class="position-absolute triangle"></div>
           <div class="position-absolute parallelogram"></div>
           <div class="position-absolute parallelogram-2"></div>
-          <div class="position-absolute arrows"><img src="/assets/images/Group 1arrowleft.png" alt="setas para direita" class="arrows-img"></div>
+          <div class="position-absolute container-arrows d-flex gap-1">
+            <div class="arrow-common arrow1"></div>
+            <div class="arrow-common arrow2"></div>
+            <div class="arrow-common arrow3"></div>
+          </div>
         </section>
     </main>
     
