--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="/assets/css/app.css">
   </head>
   <body >
-    <main class="bg-white w-100 h-100 d-flex">
+    <main class="bg-white w-100 h-100 d-flex overflow-hidden">
         <section class="d-flex flex-column w-70 align-items-center justify-content-center">
             <img  class="img-logo-overwatch" src="/assets/images/overwatch-logo 1.png" alt="logo Overwatch">
             <div class="container-father-form w-100 d-flex flex-column align-items-center">
               <span class="welcome-play fs-5 fw-boler text-start w-75 p-1">BEM-VINDO, HERÓI!</span>
-            <form class="gap-2 login-acess mt-4 d-flex flex-column w-100 align-items-center gap-1">              
+            <form class="gap-2 login-acess mt-4 d-flex flex-column w-100 align-items-center gap-2">              
               <label for="e-mail"></label>
-              <input class="input p-3 border border-0 fw-bold rounded"type="email" name="e-mail" id="e-mail" placeholder="E-MAIL">
+              <input class="input p-3 border border-0 fw-bold rounded fs-5"type="email" name="e-mail" id="e-mail" placeholder="E-MAIL">
               <label  for="password"></label>
-              <input  class="input p-3 border border-0 fw-bold rounded" type="password" name="password" id="password" placeholder="SENHA">
-              <button type="submit" class="button-acess fw-bold border border-0 rounded">ACESSAR</button>
+              <input  class="input p-3 border border-0 fw-bold rounded fs-5" type="password" name="password" id="password" placeholder="SENHA">
+              <button type="submit" class="button-acess fw-bold border border-0 rounded mt-1 fs-5 text-white">ACESSAR</button>
             </form>
             </div>
             
-            <div class="play-all d-flex flex-column justify-content-center fw-bold align-items-center rounded">
-              <span class="fs-6">JOGUE EM TODAS AS PLATAFORMAS</span>
+            <div class="play-all d-flex flex-column justify-content-around fw-bold align-items-center rounded">
+              <span class="fs-5">JOGUE EM TODAS AS PLATAFORMAS</span>
               <div class="platforms d-flex align-content-center justify-content-center gap-2">
                 <img class="logo-platforms" src="/assets/images/logotipo-do-xbox.png" alt="logo xbox">
                 <img class="logo-platforms" src="/assets/images/ps4.png" alt="logo ps4">
@@ -32,10 +32,16 @@
             </div>            
         </section>
 
+        <section class="position-relative imgs-central h-100">
+          <img class="position-absolute character" src="/assets/images/personagem01.png" alt="personagem no centro da tela">
+          <img class="position-absolute logo-central" src="/assets/images/Mask grouptruelogobw.png" alt="logo central">
+        </section>
+
         <section class=" position-relative section-2 w-100">
           <div class="position-absolute triangle"></div>
           <div class="position-absolute parallelogram"></div>
           <div class="position-absolute parallelogram-2"></div>
+          <div class="position-absolute ellipse"></div>
           <div class="position-absolute container-arrows d-flex gap-1">
             <div class="arrow-common arrow1"></div>
             <div class="arrow-common arrow2"></div>
