pag 2 estilização finalizada

--- a/src/pages/beginning.html
+++ b/src/pages/beginning.html
@@ -40,6 +40,7 @@
                 <span class="h-25">RANQUEADA</span>
                 <span class="h-25">PASSE</span>
                 <span class="h-25">MISSÕES</span>
+                <div class="rounded-4 position-absolute arrow-choose"></div>
             </div>
         </section>
     
