--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
               <input class="input p-3 border border-0 fw-bold rounded fs-5"type="email" name="e-mail" id="e-mail" placeholder="E-MAIL">
               <label  for="password"></label>
               <input  class="input p-3 border border-0 fw-bold rounded fs-5" type="password" name="password" id="password" placeholder="SENHA">
-              <button type="submit" class="button-acess fw-bold border border-0 rounded mt-1 fs-5 text-white">ACESSAR</button>
+              <a href="/src/pages/beginning.html" class="button-acess fw-bold border border-0 rounded mt-1 fs-5 text-white text-center pt-2 text-decoration-none">ACESSAR</a>
             </form>
             </div>
             
@@ -34,7 +34,7 @@
 
         <section class="position-relative imgs-central h-100">
           <img class="position-absolute character" src="/assets/images/personagem01.png" alt="personagem no centro da tela">
-          <img class="position-absolute logo-central" src="/assets/images/Mask grouptruelogobw.png" alt="logo central">
+          <img class="position-absolute logo-central" src="/assets/images/overwatchlogobranco.png" alt="logo central">
         </section>
 
         <section class=" position-relative section-2 w-100">
