alteração na pag heros

--- a/src/pages/heros.html
+++ b/src/pages/heros.html
@@ -62,7 +62,9 @@
     
         <section class="bg-white position-relative section-2 w-50 d-flex ">
             <div class="position-absolute heros-polygon"></div>
-            <div class="position-absolute polygon-beg2"></div> 
+            <div class="position-absolute polygon-beg2"></div>
+            <div class="name-character"></div> 
+            <div class="infos-character"></div>
         </section>
     </main>
 
