alterando widths pag 1

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body >
     <main class="bg-white w-100 h-100 d-flex overflow-hidden">
-        <section class="d-flex flex-column w-70 align-items-center justify-content-center">
+        <section class="d-flex flex-column w-70 align-items-center justify-content-center position-relative">
             <img  class="img-logo-overwatch" src="/assets/images/overwatch-logo 1.png" alt="logo Overwatch">
             <div class="container-father-form w-100 d-flex flex-column align-items-center">
               <span class="welcome-play fs-5 fw-boler text-start w-75 p-1">BEM-VINDO, HERÓI!</span>
@@ -29,7 +29,10 @@
                 <img class="logo-platforms" src="/assets/images/ps4.png" alt="logo ps4">
                 <img class="logo-platforms" src="/assets/images/silhueta-do-logotipo-do-windows.png" alt="logo windows">
               </div>
-            </div>            
+            </div>
+            <div class="position-absolute border1"></div> 
+            <div class="position-absolute border2"></div>            
+
         </section>
 
         <section class="position-relative imgs-central h-100">
