--- a/src/pages/second-hero.html
+++ b/src/pages/second-hero.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/app.css">
     <link rel="stylesheet" href="/assets/css/beginning.css">
-    <link rel="stylesheet" href="/assets/css/heros.css">
+    <link rel="stylesheet" href="/assets/css/heros.css">    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Heróis</title>
 </head>
@@ -27,7 +27,9 @@
             </div>
             <div class="infos-character d-flex gap-4">
                 <div class="rounded-4 skew rectangle-heros border border-1 d-flex justify-content-between align-items-center ps-2 pe-3">
-                    <img class="avatar avatar-heros position absolute rounded-4" src="/assets/images/tacerProfile.png" alt="tracer avatar">
+                    <div class="avatar-heros avatar-dva rounded-4">
+
+                    </div>
                     <span class="fs-2 fw-bolder">JOGADOR 01</span>
                 </div>
                 <div class="rounded-4 skew square square-1 border border-1 d-flex justify-content-center align-items-center">
@@ -46,11 +48,11 @@
         <section class="section1 w-50 position-relative">
             <img class="position-absolute background-logo background-logo-heros" src="/assets/images/overwatchlogobranco.png" alt="logo branco de fundo">
             <div class="position-absolute circle-heros">
-                <img  class="big-trace" src="/assets/images/personagem01.png" alt="trace mirando sua arma">
+                <img  class="big-trace big-dva" src="/assets/images/dva.png" alt="d.va mirando sua arma">
             </div>
             <div class="position-absolute container-sm-circles d-flex justify-content-between align-items-center">
                 <div class="circle-hero-sm-exchange d-flex justify-content-center align-items-center">
-                    <a href="second-hero.html">
+                    <a href="heros.html">
                         <img class="icons-character"src="/assets/images/exchange.png" alt="troca de personagem">
                     </a>
                    
@@ -70,26 +72,26 @@
         <section class="bg-white position-relative section-2 w-50 d-flex ">
             <div class="position-absolute heros-polygon"></div>
             <div class="position-absolute polygon-beg2"></div>
-            <div class="position-absolute name-character">TRACER</div> 
+            <div class="position-absolute name-character">D.VA</div> 
             <div class="position-absolute infos-character2 d-flex flex-column gap-2">
                 <div class="info-info mx-5 mt-5 rounded-5">
-                    <div class="info-general info-1 rounded-5"></div>
+                    <div class="info-general info-1-dva rounded-5"></div>
                 </div>
                 <div class="info-info mx-5 mt-1 rounded-5">
-                    <div class="info-general info-2 rounded-5 d-flex justify-content-start align-items-center">
+                    <div class="info-general info-2-dva rounded-5 d-flex justify-content-start align-items-center">
                         <img class="m-3 icons-character-shield" src="/assets/images/icon-shield.png" alt="escudo">
                     </div>
                 </div>
                 <div class="info-info mx-5 mt-1 rounded-5">
-                    <div class="info-general info-3 rounded-5">
+                    <div class="info-general info-3-dva rounded-5">
                         <img class="m-3 icons-character" src="/assets/images/heart.png" alt="coração">
                     </div>
                 </div>
                 <div class="info-info mx-5 mt-1 rounded-5">
-                    <div class="info-general info-4 rounded-5"></div>
+                    <div class="info-general info-4-dva rounded-5"></div>
                 </div>
                 <div class="container-avatar-big mx-5 mt-5 d-flex justify-content-center">
-                    <img class="rounded-4 mx-5 avatar-big" src="/assets/images/tacerProfile.png" alt="Trace">
+                    <div class="avatar-big-dva rounded-4"></div>
                 </div>
             </div>
             
