pag 1 responsiva em 3 resoluções de tela

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             </div>
             
             <div class="play-all d-flex flex-column justify-content-around fw-bold align-items-center rounded">
-              <span class="fs-5">JOGUE EM TODAS AS PLATAFORMAS</span>
+              <span class="play-all-platsforms">JOGUE EM TODAS AS PLATAFORMAS</span>
               <div class="platforms d-flex align-content-center justify-content-center gap-2">
                 <img class="logo-platforms" src="/assets/images/logotipo-do-xbox.png" alt="logo xbox">
                 <img class="logo-platforms" src="/assets/images/ps4.png" alt="logo ps4">
