mexendo com a responsividade da pag 2

--- a/src/pages/heros.html
+++ b/src/pages/heros.html
@@ -27,7 +27,9 @@
             </div>
             <div class="infos-character d-flex gap-4">
                 <div class="rounded-4 skew rectangle-heros border border-1 d-flex justify-content-between align-items-center ps-2 pe-3">
-                    <img class="avatar avatar-heros position absolute rounded-4" src="/assets/images/tacerProfile.png" alt="tracer avatar">
+                    <div class="position-relative container-avatar">
+                        <img class="avatar avatar-heros position absolute rounded-4" src="/assets/images/tacerProfile.png" alt="tracer avatar">
+                    </div>                   
                     <span class="fs-2 fw-bolder">JOGADOR 01</span>
                 </div>
                 <div class="rounded-4 skew square square-1 border border-1 d-flex justify-content-center align-items-center">
