ainda trabalhando com responsividade na pag 2

--- a/src/pages/beginning.html
+++ b/src/pages/beginning.html
@@ -60,7 +60,7 @@
             <div class="position-absolute circle2"></div>
             <div class="position-absolute circle3"></div>
             <img class="position-absolute character1" src="/assets/images/character4.png" alt="Personagem">
-            <img class="position-absolute  character2" src="/assets/images/character3.png" alt="Personagem">
+            <img class="position-absolute d-flex character2" src="/assets/images/character3.png" alt="Personagem">
             
         </section>
     </main>
