--- a/src/pages/heros.html
+++ b/src/pages/heros.html
@@ -74,23 +74,23 @@
             <div class="position-absolute polygon-beg2"></div>
             <div class="position-absolute name-character">TRACER</div> 
             <div class="position-absolute infos-character2 d-flex flex-column gap-2">
-                <div class="info-info mx-5 mt-5 rounded-5">
+                <div class="info-info mx-5 mx-md-4 mt-5 mt-md-4 rounded-5">
                     <div class="info-general info-1 rounded-5"></div>
                 </div>
-                <div class="info-info mx-5 mt-1 rounded-5">
+                <div class="info-info mx-5 mx-md-4 mt-1 rounded-5">
                     <div class="info-general info-2 rounded-5 d-flex justify-content-start align-items-center">
                         <img class="m-3 icons-character-shield" src="/assets/images/icon-shield.png" alt="escudo">
                     </div>
                 </div>
-                <div class="info-info mx-5 mt-1 rounded-5">
+                <div class="info-info mx-5 mx-md-4 mt-1 rounded-5">
                     <div class="info-general info-3 rounded-5">
                         <img class="m-3 icons-character" src="/assets/images/heart.png" alt="coração">
                     </div>
                 </div>
-                <div class="info-info mx-5 mt-1 rounded-5">
+                <div class="info-info mx-5 mx-md-4 mt-1 rounded-5">
                     <div class="info-general info-4 rounded-5"></div>
                 </div>
-                <div class="container-avatar-big mx-5 mt-5 d-flex justify-content-center">
+                <div class="container-avatar-big mx-5 mx-md-0 mt-5 d-flex justify-content-center">
                     <img class="rounded-4 mx-5 avatar-big" src="/assets/images/tacerProfile.png" alt="Trace">
                 </div>
             </div>
