feita mudança de cor personagem d.va, e ajustando responsividade 1280px

--- a/src/pages/heros.html
+++ b/src/pages/heros.html
@@ -50,12 +50,11 @@
             <div class="position-absolute circle-heros">
                 <img  class="big-trace" src="/assets/images/personagem01.png" alt="trace mirando sua arma">
             </div>
-            <div class="position-absolute container-sm-circles d-flex justify-content-between align-items-center">
+            <div class="position-absolute container-sm-circles d-flex align-items-center">
                 <div class="circle-hero-sm-exchange d-flex justify-content-center align-items-center">
                     <a href="second-hero.html">
                         <img class="icons-character"src="/assets/images/exchange.png" alt="troca de personagem">
-                    </a>
-                   
+                    </a>                   
                 </div>
                 <div class="circle-hero-sm d-flex justify-content-center align-items-center">
                     <img class="icons-character-shield" src="/assets/images/icon-shield.png" alt="escudo">
@@ -84,14 +83,14 @@
                 </div>
                 <div class="info-info mx-5 mx-md-4 mt-1 rounded-5">
                     <div class="info-general info-3 rounded-5">
-                        <img class="m-3 icons-character" src="/assets/images/heart.png" alt="coração">
+                        <img class="icons-character heart-icon" src="/assets/images/heart.png" alt="coração">
                     </div>
                 </div>
                 <div class="info-info mx-5 mx-md-4 mt-1 rounded-5">
                     <div class="info-general info-4 rounded-5"></div>
                 </div>
-                <div class="container-avatar-big mx-5 mx-md-0 mt-5 d-flex justify-content-center">
-                    <img class="rounded-4 mx-5 avatar-big" src="/assets/images/tacerProfile.png" alt="Trace">
+                <div class="container-avatar-big mx-5 mx-md-0 mt-5 mt-md-0 d-flex justify-content-center position-relative">
+                    <img class="position-absolute rounded-4 mx-5 mx-md-0 avatar-big" src="/assets/images/tacerProfile.png" alt="Trace">
                 </div>
             </div>
             
