trabalhando ainda com a responsividade nas pag

--- a/src/pages/beginning.html
+++ b/src/pages/beginning.html
@@ -55,7 +55,7 @@
             <div class="position-absolute heros-big">HERÓIS</div>
             <img class="position-absolute arrows" src="/assets/images/Group 1arrowright.png" alt="setas">
             <div class="rounded-1 position-absolute border1"></div>
-            <div class="rounded-1 position-absolute border2"></div>
+            <div class="rounded-1 position-absolute border2-beginning"></div>
             <div class="position-absolute circle1"></div>
             <div class="position-absolute circle2"></div>
             <div class="position-absolute circle3"></div>
