--- a/src/pages/heros.html
+++ b/src/pages/heros.html
@@ -13,8 +13,8 @@
 <body >
 
    <header>
-        <nav class="pt-5 position-fixed d-flex justify-content-center align-items-center">
-            <div class="menu d-flex gap-5 align-items-center">
+        <nav class="pt-3 position-fixed d-flex justify-content-center align-items-center">
+            <div class="menu d-flex align-items-center">
                 <div class="logo">
                     <a href="/src/index.html">
                         <img class="logo"src="/assets/images/logo.png" alt="logo">
@@ -25,12 +25,12 @@
                 <div class="menu-item hover-menu">NEWS</div>
                 <div class="menu-item sports hover-menu">SPORTS</div>            
             </div>
-            <div class="infos-character d-flex gap-4">
+            <div class="infos-character d-flex gap-3">
                 <div class="rounded-4 skew rectangle-heros border border-1 d-flex justify-content-between align-items-center ps-2 pe-3">
                     <div class="position-relative container-avatar">
                         <img class="avatar avatar-heros position absolute rounded-4" src="/assets/images/tacerProfile.png" alt="tracer avatar">
                     </div>                   
-                    <span class="fs-2 fw-bolder">JOGADOR 01</span>
+                    <span class="fw-bolder">JOGADOR 01</span>
                 </div>
                 <div class="rounded-4 skew square square-1 border border-1 d-flex justify-content-center align-items-center">
                     <img class="icons-menu" src="/assets/images/icon-settings.png" alt="settings">
