buscando transformar a página mais responsivas com porcentagem ao invés de px e rem

--- a/src/pages/beginning.html
+++ b/src/pages/beginning.html
@@ -40,10 +40,10 @@
     <main class="h-100 w-100 overflow-hidden d-flex">
         <section class="section1 w-50">
             <div class="position-relative play-ranked d-flex flex-column gap-4 h-25 w-100">
-                <span class="h-25">JOGAR</span>
-                <span class="h-25">RANQUEADA</span>
-                <span class="h-25">PASSE</span>
-                <span class="h-25">MISSÕES</span>
+                <span class="h-25 options">JOGAR</span>
+                <span class="h-25 options">RANQUEADA</span>
+                <span class="h-25 options">PASSE</span>
+                <span class="h-25 options">MISSÕES</span>
                 <div class="rounded-4 position-absolute arrow-choose"></div>                
             </div>
             <img class="position-absolute background-logo" src="/assets/images/overwatchlogobranco.png" alt="logo branco de fundo">
@@ -61,8 +61,12 @@
             <div class="position-absolute circle3"></div>
             <img class="position-absolute character1" src="/assets/images/character4.png" alt="Personagem">
             <img class="position-absolute d-flex character2" src="/assets/images/character3.png" alt="Personagem">
-            
+
         </section>
+
+        <audio loop autoplay>
+            <source src="/assets/audio/Overwatch 2 Kiriko Main Theme Song BOW by MFS.mp3" type="audio/mpeg">
+            </audio> 
     </main>
 
     
