--- a/src/pages-test/index-copy.html
+++ b/src/pages-test/index-copy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/app-copy.css">
+    <link rel="stylesheet" href="/assets/css/css-teste/app-copy.css">
   </head>
   <body >
     <main class="bg-white w-100 h-100 d-flex overflow-hidden">
@@ -18,11 +18,11 @@
               <input class="input p-3 border border-0 fw-bold rounded fs-5"type="email" name="e-mail" id="e-mail" placeholder="E-MAIL">
               <label  for="password"></label>
               <input  class="input p-3 border border-0 fw-bold rounded fs-5" type="password" name="password" id="password" placeholder="SENHA">
-              <a href="/src/pages/beginning.html" class="button-acess fw-bold border border-0 rounded mt-1 fs-5 text-white text-center pt-2 text-decoration-none">ACESSAR</a>
+              <a href="/src/pages-test/beginning-copy.html" class="button-acess fw-bold border border-0 rounded mt-1 fs-5 text-white text-center pt-2 text-decoration-none">ACESSAR</a>
             </form>
             </div>
             
-            <div class="play-all d-flex flex-column justify-content-around fw-bold align-items-center rounded">
+            <div class="play-all d-flex flex-column justify-content-around fw-bold align-items-center rounded text-center">
               <span class="play-all-platsforms">JOGUE EM TODAS AS PLATAFORMAS</span>
               <div class="platforms d-flex align-content-center justify-content-center gap-2">
                 <img class="logo-platforms" src="/assets/images/logotipo-do-xbox.png" alt="logo xbox">
@@ -36,7 +36,7 @@
         </section>
 
         <section class="position-relative  h-100">
-          <div class="imgs-central">
+          <div class="imgs-central position-absolute">
             <img class="position-absolute character" src="/assets/images/personagem01.png" alt="personagem no centro da tela">
             <img class="position-absolute logo-central" src="/assets/images/overwatchlogobranco.png" alt="logo central">
           </div>
