--- a/src/pages/beginning.html
+++ b/src/pages/beginning.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="/assets/css/app.css">
     <link rel="stylesheet" href="/assets/css/beginning.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Início</title>
 </head>
-<body >
+<body class="animate__animated animate__fadeInRight" >
 
    <header>
         <nav class="pt-5 position-fixed d-flex justify-content-center align-items-center">
-            <div class="menu d-flex gap-5 align-items-center">
+            <div class="menu d-flex align-items-center">
                 <div class="logo">
                     <a href="/src/index.html">
                         <img class="logo"src="/assets/images/logo.png" alt="logo">
