add animações e finalizado para a apresentação

--- a/src/pages/beginning.html
+++ b/src/pages/beginning.html
@@ -43,7 +43,7 @@
     <main class="h-100 w-100 overflow-hidden d-flex">
         <section class="section1 w-50">
             <div class="position-relative play-ranked d-flex flex-column gap-4 h-25 w-100">
-                <span class="h-25 options">JOGAR</span>
+                <span onmouseover="changeArrowChoose()" class="h-25 options">JOGAR</span>
                 <span class="h-25 options">RANQUEADA</span>
                 <span class="h-25 options">PASSE</span>
                 <span class="h-25 options">MISSÕES</span>
@@ -74,5 +74,8 @@
 
     
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+
+</script>
+
 </html>
