--- a/src/pages/heros.html
+++ b/src/pages/heros.html
@@ -50,7 +50,7 @@
          
         <section class="section1 w-50 position-relative">
             <img class="position-absolute background-logo background-logo-heros" src="/assets/images/overwatchlogobranco.png" alt="logo branco de fundo">
-            <div class="position-absolute circle-heros">
+            <div class="position-absolute circle-heros animate__animated animate__flip">
                 <img  class="big-trace" src="/assets/images/personagem01.png" alt="trace mirando sua arma">
             </div>
             <div class="position-absolute container-sm-circles d-flex align-items-center">
