--- a/src/pages/second-hero.html
+++ b/src/pages/second-hero.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/assets/css/beginning.css">
     <link rel="stylesheet" href="/assets/css/heros.css">    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Heróis</title>
 </head>
 <body >
@@ -48,7 +51,7 @@
          
         <section class="section1 w-50 position-relative">
             <img class="position-absolute background-logo background-logo-heros" src="/assets/images/overwatchlogobranco.png" alt="logo branco de fundo">
-            <div class="position-absolute circle-heros-dva">
+            <div class="position-absolute circle-heros-dva animate__animated animate__flip">
                 <img  class="big-trace big-dva" src="/assets/images/dva.png" alt="d.va mirando sua arma">
             </div>
             <div class="position-absolute container-sm-circles d-flex align-items-center">
