--- a/src/pages/beginning.html
+++ b/src/pages/beginning.html
@@ -67,9 +67,9 @@
 
         </section>
 
-        <audio loop autoplay>
+        <audio loop autoplay controls>
             <source src="/assets/audio/Overwatch 2 Kiriko Main Theme Song BOW by MFS.mp3" type="audio/mpeg">
-            </audio> 
+        </audio> 
     </main>
 
     
