--- a/src/pages/second-hero.html
+++ b/src/pages/second-hero.html
@@ -62,7 +62,7 @@
                    
                 </div>
                 <div class="circle-hero-sm-dva d-flex justify-content-center align-items-center">
-                    <img class="icons-character-shield" src="/assets/images/icon-shield.png" alt="escudo">
+                    <img class="icons-character-shield" src="/assets/images/shield.png" alt="escudo">
                 </div>
                 <div class="circle-hero-sm-dva d-flex justify-content-center align-items-center">
                     <img class="icons-character" src="/assets/images/icon-cross.png" alt="cruz">
@@ -80,11 +80,13 @@
             <div class="position-absolute name-character">D.VA</div> 
             <div class="position-absolute infos-character2 d-flex flex-column gap-2">
                 <div class="info-info mx-5 mt-5 mt-1 mt-md-4 mx-md-4 rounded-5">
-                    <div class="info-general-dva info-1-dva rounded-5"></div>
+                    <div class="info-general-dva info-1-dva rounded-5">
+                        <img class="m-3 icons-character" src="/assets/images/espada.png" alt="espada">
+                    </div>
                 </div>
                 <div class="info-info mx-5 mt-1 mt-md-1 mx-md-4 rounded-5">
                     <div class="info-general-dva info-2-dva rounded-5 d-flex justify-content-start align-items-center">
-                        <img class="m-3 icons-character-shield" src="/assets/images/icon-shield.png" alt="escudo">
+                        <img class="m-3 icons-character-shield" src="/assets/images/shield.png" alt="escudo">
                     </div>
                 </div>
                 <div class="info-info mx-5 mt-1 rounded-5 mt-md-1 mx-md-4">
@@ -93,7 +95,9 @@
                     </div>
                 </div>
                 <div class="info-info mx-5 mt-1 rounded-5 mt-md-1 mx-md-4 ">
-                    <div class="info-general-dva info-4-dva rounded-5"></div>
+                    <div class="info-general-dva info-4-dva rounded-5">
+                        <img class="m-3 icons-character" src="/assets/images/running.png" alt="correr">
+                    </div>
                 </div>
                 <div class="position-relative mx-5 mt-5 mt-md-0 mx-md-0 d-flex justify-content-center">
                     <div class="position-absolute avatar-big-dva rounded-4"></div>
