--- a/src/pages/heros.html
+++ b/src/pages/heros.html
@@ -60,7 +60,7 @@
                     </a>                   
                 </div>
                 <div class="circle-hero-sm d-flex justify-content-center align-items-center">
-                    <img class="icons-character-shield" src="/assets/images/icon-shield.png" alt="escudo">
+                    <img class="icons-character-shield" src="/assets/images/shield.png" alt="escudo">
                 </div>
                 <div class="circle-hero-sm d-flex justify-content-center align-items-center">
                     <img class="icons-character" src="/assets/images/icon-cross.png" alt="cruz">
@@ -77,11 +77,13 @@
             <div class="position-absolute name-character">TRACER</div> 
             <div class="position-absolute infos-character2 d-flex flex-column gap-2">
                 <div class="info-info mx-5 mx-md-4 mt-5 mt-md-4 rounded-5">
-                    <div class="info-general info-1 rounded-5"></div>
+                    <div class="info-general info-1 rounded-5">
+                        <img class="m-3 icons-character" src="/assets/images/espada.png" alt="espada">
+                    </div>
                 </div>
                 <div class="info-info mx-5 mx-md-4 mt-1 rounded-5">
                     <div class="info-general info-2 rounded-5 d-flex justify-content-start align-items-center">
-                        <img class="m-3 icons-character-shield" src="/assets/images/icon-shield.png" alt="escudo">
+                        <img class="m-3 icons-character-shield" src="/assets/images/shield.png" alt="escudo">
                     </div>
                 </div>
                 <div class="info-info mx-5 mx-md-4 mt-1 rounded-5">
@@ -90,7 +92,9 @@
                     </div>
                 </div>
                 <div class="info-info mx-5 mx-md-4 mt-1 rounded-5">
-                    <div class="info-general info-4 rounded-5"></div>
+                    <div class="info-general info-4 rounded-5">
+                        <img class="m-3 icons-character" src="/assets/images/running.png" alt="correr">
+                    </div>
                 </div>
                 <div class="container-avatar-big mx-5 mx-md-0 mt-5 mt-md-0 d-flex justify-content-center position-relative">
                     <img class="position-absolute rounded-4 mx-5 mx-md-0 avatar-big" src="/assets/images/tacerProfile.png" alt="Trace">
