--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self' https://cdn.jsdelivr.net">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/app.css">
   </head>
   <body >
     <main class="bg-white w-100 h-100 d-flex overflow-hidden">
-        <section class="d-flex flex-column w-70 align-items-center justify-content-center position-relative">
+      <section class="d-flex flex-column w-70 align-items-center justify-content-center position-relative">
             <img  class="img-logo-overwatch" src="/assets/images/overwatch-logo 1.png" alt="logo Overwatch">
             <div class="container-father-form w-100 d-flex flex-column align-items-center">
               <span class="welcome-play fs-5 fw-boler text-start w-75 p-1">BEM-VINDO, HERÓI!</span>
@@ -40,7 +41,7 @@
           <img class="position-absolute logo-central" src="/assets/images/overwatchlogobranco.png" alt="logo central">
         </section>
 
-        <section class=" position-relative section-2 w-100">
+        <section class="position-relative section-2 w-100">
           <div class="position-absolute triangle"></div>
           <div class="position-absolute parallelogram"></div>
           <div class="position-absolute parallelogram-2"></div>
